--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.0.0",
+    "dotenv": "^16.2.0",
     "fastify": "^4.18.0",
+    "mongoose": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
